공백수정 및 뉴스레터웹진(기업홍보) 수정

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -2253,6 +2253,7 @@
     flex-direction: column;
     border-radius: 10px;
     border: 1px solid #ddd;
+    width: 100%;
 }
 .tbl_newletter ul li a .division {
     display: flex;
