--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -1363,16 +1363,18 @@ header.headerfix .header_top {
     .swiper-container .slide_wrap .img video {
         width: auto;
         margin-left: -500px;
+        min-width: 600vw;
     }
     .swiper-container .slide_wrap .inner {
         max-width: 100%;
     }
     .swiper-container .swiper-pagination.sec1_full {
-        width: auto;
+        justify-content: center;
+        width: 100%;
         max-width: 100%;
         top: 11%;
-        left: 20px;
-        transform: translateX(0);
+        left: 50%;
+        transform: translateX(-50%);
     }
     .swiper-container .swiper-pagination.sec1_full .swiper-pagination-bullet {
         padding: 7px 20px;
