--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -294,13 +294,13 @@ header.font_black .btn_login_box li a::before {
     left: 0;
     width: 100%;
     height: 0;
-    background: #fff url(../images/bg/bg_gnb.png) no-repeat -317px center;
+    background: #fff url(../images/bg/bg_gnb.png) no-repeat -317px 83%;
     background-size: 645px auto;
     transition: height .3s;
     z-index: 11;
 }
 .gnb_open .header_bg {
-    height: 650px;
+    box-shadow: 0px 1px 7px 2px rgb(0 0 0 / 20%);
 }
 
 /* container */
