--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -3721,7 +3721,7 @@ a.ui-button:active,
         flex-direction: column;
         align-items: flex-end;
     }
-    .list_group_info .bottom ul li + li::before {
+    .list_group_info .bottom > ul > li + li::before {
         display: none;
     }
 
