액셀러레이터 화면 모바일 작업

--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -3431,8 +3431,11 @@ a.ico_folder::after {
 .vision-slogan__title {
     display: block;
     color: #2a2f7c;
+    max-width: 50%;
+    margin: 0 auto;
+    word-break: keep-all;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1.2rem;
     line-height: 1.5;
 }
 
@@ -6844,6 +6847,57 @@ footer .footer_bottom {
     }
     .relevant_05 > ul li .box span {
         font-size: 14px;
+    }
+    /* 액셀러레이터협회 */
+    .vision-wrap .bul01 {
+        font-size: 15px;
+    }
+    .vision-wrap .vision-tit {
+        width: 100%;
+        height: 48px;
+    }
+    .vision-wrap .vision-tit > div {
+        height: auto;
+        padding: 10px 0;
+    }
+    .vision-wrap .vision-tit > div > span {
+        font-size: 14px;
+    }
+    .vision-diagram .arrow > span {
+        display: block;
+        word-break: keep-all;
+        font-size: 16px;
+    }
+    .vision-diagram .diagram-lst {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        width: 100%;
+        margin: 20px 0 0 0;
+    }
+    .vision-diagram .diagram-lst > li {
+        width: calc(50% - 10px);
+    }
+    .vision-diagram .diagram-lst > li + li {
+        padding-left: 0;
+    }
+    .vision-diagram .diagram-lst > li > strong {
+        width: 140px;
+        height: 140px;
+    }
+    .vision-wrap .bul01 {
+        word-break: keep-all;
+        margin-bottom: 50px;
+    }
+    .vision-slogan__img {
+        padding: 0;
+    }
+    .vision-slogan__img img {
+        width: 100%;
+    }
+    .vision-slogan__title {
+        max-width: 100%;
     }
 
     /* 회원가입 */
