--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -584,6 +584,9 @@ header.font_black .btn_login_box li a::before {
     content: "-";
     color: #fff;
 }
+.search_item_more .search_item:nth-child(2) {
+    padding-top: 45px;
+}
 
 /* 투자자 검색 - 상세 */
 .investor_card {
