정책 버튼 간격 수정

--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -996,7 +996,7 @@ header.font_black .btn_login_box li a::before {
     width: 195px;
 }
 .policy_list.type_02 li {
-    width: 195px;
+    flex: 1;
 }
 .policy_list li a {
     display: flex;
