--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -3051,6 +3051,7 @@
     text-align: center;
     font-size: 17px;
     font-weight: 500;
+    word-break: break-all;
 }
 .tab_group .tab_btn > ul > li .tab_submenu li a:hover,
 .tab_group .tab_btn > ul > li .tab_submenu li a:focus {
