--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -4546,28 +4546,30 @@ a.ico_folder::after {
     flex-direction: column;
     gap: 10px;
 }
-.search_result_box .result_box dl + dl {
+.search_result_box .result_box a {
+    display: block;
+}
+.search_result_box .result_box a + a {
     margin-top: 30px;
 }
 .search_result_box .result_box dl dt {
-    font-size: 17px;
-    font-weight: 600;
-}
-.search_result_box .result_box dl dt .result_txt {
-    font-size: 17px;
-    font-weight: 600;
-    color: #2850d3;
-}
-.search_result_box .result_box dl dd a {
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
+    font-size: 17px;
+    font-weight: 600;
+    word-break: break-all;
 }
-.search_result_box .result_box dl:hover a,
-.search_result_box .result_box dl a:focus {
+.search_result_box .result_box dl .result_txt {
+    font-size: 17px;
+    font-weight: 600;
+    color: #2850d3;
+}
+.search_result_box .result_box a:hover,
+.search_result_box .result_box a:focus {
     text-decoration: underline;
 }
 .search_result_box .result_box .more {
@@ -4578,6 +4580,23 @@ a.ico_folder::after {
 }
 .search_result_box .result_box .more a {
     font-weight: 500;
+}
+.search_result_box .result_box dl dd {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+}
+.search_result_box .result_box .nodata {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 50px 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 /* 사이트맵 */
@@ -7362,6 +7381,9 @@ footer .footer_bottom {
     .search_result_box .result_box .more {
         margin-top: 10px;
         margin-bottom: -10px;
+    }
+    .search_result_box .result_box .nodata {
+        font-size: 15px;
     }
 
     /* 사이트맵 */
