--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1901,6 +1901,16 @@ a.ico_folder::after {
     height: 100%;
     background-color: rgba(0, 0, 0, .3);
 }
+.statistics_group.statistics_02,
+.statistics_group.statistics_03 {
+    padding: 60px 0;
+}
+.statistics_02 .statistics_box ul li:first-child::before,
+.statistics_02 .statistics_box ul li:last-child::after,
+.statistics_03 .statistics_box ul li:first-child::before,
+.statistics_03 .statistics_box ul li:last-child::after {
+    display: none;
+}
 .statistics_box ul li span {
     font-size: 22px;
     font-weight: 500;
@@ -1931,6 +1941,12 @@ a.ico_folder::after {
 .statistics_group .swiper-button-next {
     right: 35px;
     background-image: url(../images/ico/statistics_box_right_b.png);
+}
+.statistics_group.statistics_02 .swiper-button-prev,
+.statistics_group.statistics_02 .swiper-button-next,
+.statistics_group.statistics_03 .swiper-button-prev,
+.statistics_group.statistics_03 .swiper-button-next {
+    display: none;
 }
 .statistics_group .standard {
     position: absolute;
@@ -6374,6 +6390,10 @@ footer .footer_bottom {
         /* background: url(../images/bg/bg_statistics_box_02.png) no-repeat; */
         background-size: 100% auto;
     }
+    .statistics_group.statistics_02,
+    .statistics_group.statistics_03 {
+        padding: 30px 15px 20px;
+    }
     .statistics_box ul li {
         min-width: 100%;
         min-height: auto;
@@ -6382,14 +6402,10 @@ footer .footer_bottom {
         box-sizing: border-box;
     }
     .statistics_box ul li:first-child::before {
-        width: 100%;
-        height: 1px;
+        display: none;
     }
     .statistics_box ul li::after {
-        top: inherit;
-        bottom: 0;
-        width: 100%;
-        height: 1px;
+        display: none;
     }
     .statistics_box ul li span {
         font-size: 18px;
@@ -6417,6 +6433,18 @@ footer .footer_bottom {
     }
     .disclosure_box .btn_list button span {
         font-size: 17px;
+    }
+    .statistics_group.statistics_02 .swiper-button-prev,
+    .statistics_group.statistics_02 .swiper-button-next,
+    .statistics_group.statistics_03 .swiper-button-prev,
+    .statistics_group.statistics_03 .swiper-button-next {
+        display: block;
+    }
+    .statistics_group .swiper-button-prev {
+        left: 15px;
+    }
+    .statistics_group .swiper-button-next {
+        right: 15px;
     }
 
     /* 통계 - 투자실적 */
