메인 현황/통계 수정 및 서브페이지 통계 수정

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -35,6 +35,11 @@
 .mt30{margin-top: 30px !important;}
 .mt40{margin-top: 40px !important;}
 .mt50{margin-top: 50px !important;}
+.mb10{margin-bottom: 10px !important;}
+.mb20{margin-bottom: 20px !important;}
+.mb30{margin-bottom: 30px !important;}
+.mb40{margin-bottom: 40px !important;}
+.mb50{margin-bottom: 50px !important;}
 
 /* 폰트컬러 */
 .f_color_blue {color: #3f89e5;}
