--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -41,6 +41,9 @@
 .mb40{margin-bottom: 40px !important;}
 .mb50{margin-bottom: 50px !important;}
 
+/* 패딩 */
+.pr20 {padding-right: 20px !important;}
+
 /* 폰트컬러 */
 .f_color_blue {color: #3f89e5;}
 .f_color_orange {color: #ff6f00;}
